@@ -120,6 +120,7 @@ public: // With description
   G4bool          IsForceAuxEdgeVisible          () const;
   G4bool          IsForceLineSegmentsPerCircle   () const;
   G4int           GetForcedLineSegmentsPerCircle () const;
+  G4int           GetMinLineSegmentsPerCircle    () const;
   G4double        GetStartTime                   () const;
   G4double        GetEndTime                     () const;
   // Returns an expendable copy of the G4AttValues...
@@ -140,6 +141,7 @@ private:
   G4bool    fForceAuxEdgeVisible;  // Force drawing of auxilary edges. 
   G4int fForcedLineSegmentsPerCircle;  // Forced lines segments per
                                        // circle.  <=0 means not forced.
+  G4int fMinLineSegmentsPerCircle; // number of sides per circle
   G4double fStartTime, fEndTime;   // Time range.
   const std::vector<G4AttValue>*     fAttValues;  // For picking, etc.
   const std::map<G4String,G4AttDef>* fAttDefs;    // Corresponding definitions.
