@@ -20,6 +20,9 @@ committal in the CVS repository !
 History file for graphics_reps category
 ---------------------------------------
 
+22th August 2014  John Allison  (greps-V10-00-08)
+- G4VisAttributes: Add fMinLineSegmentsPerCircle parameter
+
 14th August 2014  John Allison  (greps-V10-00-07)
 - HepPolyhedron::SetReferences: Protected against a null pointer.
 - BooleanProcessor::execute: Corrected spelling mistake in message.
